--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+    <head>
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    </head>
+    <body style="font-family: 'Oswald', sans-serif; text-align: center;">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" style="color:white;">Decapitated Games</a>
+            <div class="navbar-collapse collapse" id="navbarCollapse" style>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main role="main">
+            <img src="Images/islands.png" class="img-fluid" style="max-width:100%; height:auto; filter: blur(5px);">
+            <div style="position:absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color:white;">
+                <h1 class="display-1">Decapitated Games</h1>
+                <p style="font-size:2em">I am a solo developer working on my own ideas, and being my own creative director. I also do digital desgin/art when I need something for my projects.</p>
+            </div>
+            <h1>Hello World</h1>
+            <p>I'm hosted with GitHub Pages.</p>
+        </main>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
